History in reverse order
----------------------------------------------------

----------------------------------------------------
infosme-build-20100709-1 14:30 bukind (v2)

2010-07-09 16:15 bukind
  previous patch is rolled back!
  bugfix: limit on the size of in-memory cache is now used
  
2010-07-09 15:40 bukind -- tag bukind-20100709-prefetch
  feature: tasks are (optionally) placed into subdirs of storeLocation
  the decision is made according to presence of parameter
  'entriesPerDirectory' in the main config.

----------------------------------------------------
infosme-build-20100709 14:30 bukind (v1,v2)

2010-07-09 14:25 bukind
  bugfix/feature: ussdpush now uses USSN_REQ_LAST instead of USSN_REQ

----------------------------------------------------
infosme-build-20100602 12:30 bukind (v1,v2)

2010-06-02 12:30 bukind
  feature: closeProcessedFiles invoked periodically to close outdated processed files

----------------------------------------------------
infosme-build-20100527 12:00 bukind (v1,v2)

2010-05-26 16:39 bukind
 bugfix: activePeriod check off-by-one error v1 & v2

----------------------------------------------------
infosme-build-20100525 11:30 bukind (v2)
2010-05-25 11:20 bukind
 feature (removed): v2 receipt waiting timers are not restored at start anymore

----------------------------------------------------
infosme-build-20100521 11:00 bukind (v2)

2010-05-20 16:45 bukind
 bugfix: v2 had a dead lock on expired responses & receipts
 feature: v2 receipt waiting timers are restored at restart (from jstore)

----------------------------------------------------
infosme-build-20100520 13:10 bukind (v1)

2010-05-20 13:00 bukind
 feature: ability to limit traffic based on SMS parts, not whole SMS.

2010-05-19 14:50 bukind
 bugfix: processingTasks() is not working in v2: inProcess() is replaced with isActive()

----------------------------------------------------
infosme-build-20100416 11:30 bukind

2010-04-14 16:30 bukind